# trending-agent

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  docker-compose.yaml  dockerfile  skill.md  xuangubao_api.md
src/: lib.rs  main.rs  report.rs
src/api/: jiuyangongshe.rs  mod.rs  test_data.json  xuangubao.rs
src/cli/: app.rs  mod.rs
src/llm/: openrouter.rs
src/report/: report.rs
src/roles/: analyst.rs  mod.rs
src/templates/: mod.rs
src/web/: mod.rs
templates/html/: analyses.html  board_distribution.html  field_items.html  limit_up_table.html  overview.html  plate_abnormal.html  report.html  timeline.html
templates/markdown/: analyses.md  board_distribution.md  field_items.md  limit_up_table.md  overview.md  plate_abnormal.md  report.md  timeline.md
